--- a/src/styles/bc.css
+++ b/src/styles/bc.css
@@ -1,3 +1,23 @@
+@media screen and (max-width: 1060px) {
+    #primary { width:67%; }
+    #secondary { width:30%; margin-left:3%;}  
+}
+
+/* Media Queries: Tabled Portrait */
+@media screen and (max-width: 768px) {
+    #primary { width:100%; }
+    #secondary { width:100%; margin:0; border:none; }
+}
+@media (max-width:1000px){
+    .my-line{
+      display: none;
+    }
+}
+@media (min-width: 850px) {
+    .bc .Artificial-Intelligence {
+        font-size: 3em !important;
+    }
+  }
 .bc{
     color: #252525;
     background: #fbc314    ;
@@ -55,3 +75,4 @@
 .cl-cr{
     background: #E83F8F !important;
 }
+
